--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,16 @@
 <html>
 <head>
     <title>统计</title>
-    <link href="{% static 'plugins/bootstrap/css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static 'plugins/jquery/jquery-3.3.1.min.js' %}"></script>
+    <!-- Bootstrap -->
+    <link href="{% static 'plugins/bootstrap/css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all" />
+    <script src="{% static 'plugins/bootstrap/js/bootstrap.min.js' %}"></script>
     <!-- Custom Theme files -->
     <!--theme-style-->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
+    <!-- -->
+    <script src="{% static 'js/note.js' %}"></script>
 </head>
 <body>
 <!--header-->
